--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2627,14 +2627,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #5ed0b1;
+				background-color: #A39B83;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #39c29d;
+				background-color: #A39B83;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
