--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
 * {
   margin: 0px;
@@ -12,7 +12,7 @@ html {
 
 body {
   font-size: 16px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h1 {
@@ -26,11 +26,17 @@ h1 {
 
 .about {
   columns: 2 500px;
+  margin: 1rem 1rem 0 1rem;
+}
+
+.section__header {
+  margin: 1rem;
 }
 
 .about__paragraph {
   font-size: 2.5rem;
   margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 .skills__container {
@@ -43,6 +49,7 @@ h1 {
     ". . . . ."
     ". . . . ."
     ". . . . .";
+  margin: 1rem;
 }
 
 nav {
@@ -110,10 +117,10 @@ nav {
 .line1,
 .line2,
 .line3 {
-  width: 2rem;
-  height: 0.25rem;
+  width: 3rem;
+  height: 0.35rem;
   background-color: #e7e7e7;
-  margin: 0.25rem;
+  margin: 0.4rem;
   border-radius: 0.5rem;
   transition: all 0.5s ease;
 }
@@ -124,7 +131,7 @@ nav {
   }
 
   .nav__link {
-    font-size: 1.0rem;
+    font-size: 1rem;
   }
 
   nav {
@@ -142,6 +149,10 @@ nav {
     width: 100%;
   }
 
+  .nav__name {
+    font-size: 3.5rem
+  }
+
   nav {
     display: flex;
     flex-direction: row;
@@ -149,7 +160,7 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    height: 2rem;
+    height: 4rem;
     width: 100%;
     padding: 1.5rem;
   }
@@ -193,7 +204,7 @@ nav {
 }
 
 .toggle .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px);
+  transform: rotate(-45deg) translate(-10px, 7px);
 }
 
 .toggle .line2 {
@@ -201,5 +212,5 @@ nav {
 }
 
 .toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translate(-10px, -7px);
 }
