--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,13 +43,25 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 0.1rem 0.1rem;
+  gap: 0.4rem 0.4rem;
   grid-auto-flow: row;
   grid-template-areas:
     ". . . . ."
     ". . . . ."
     ". . . . .";
-  margin: 1rem;
+  margin: 2rem;
+}
+
+.skill {
+  border-radius: 7.5%;
+  padding: 0.2rem;
+
+  transition: 0.25s ease all;
+}
+
+.skill:hover {
+  background-color: #dadada;
+  transform: scale(1.1);
 }
 
 nav {
@@ -150,7 +162,7 @@ nav {
   }
 
   .nav__name {
-    font-size: 3.5rem
+    font-size: 3.5rem;
   }
 
   nav {
@@ -196,6 +208,19 @@ nav {
   .menu {
     display: block;
     cursor: pointer;
+  }
+
+  .skills__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 0.25rem 0.25rem;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". . . ."
+      ". . . ."
+      ". . . ."
+      ". . . .";
   }
 }
 
