--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,27 +34,36 @@ h1 {
 }
 
 .about__paragraph {
-  font-size: 2.5rem;
+  font-size: 1.15rem;
   margin-top: 0;
   margin-bottom: 1.5rem;
 }
 
+#skills-and-tech {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: stretch;
+}
+
 .skills__container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0.4rem 0.4rem;
   grid-auto-flow: row;
   grid-template-areas:
-    ". . . . ."
-    ". . . . ."
-    ". . . . .";
+    ". . . . . ."
+    ". . . . . ."
+    ". . . . . .";
   margin: 2rem;
+  justify-items: center;
 }
 
 .skill {
   border-radius: 7.5%;
   padding: 0.2rem;
+  width: 7rem;
 
   transition: 0.25s ease all;
 }
