--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,34 @@ h1 {
   overflow-x: hidden;
 }
 
+#contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  margin: 0 0 2.25em 0;
+  width: 40%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  vertical-align: baseline;
+}
+
+tr:nth-child(2n + 1) {
+  background-color: #fafafa;
+}
+
+tr {
+  border: solid 2px #f4f4f4;
+  border-left: 0;
+  border-right: 0;
+}
+
+td {
+  padding: 0.75rem 0.75rem;
+}
+
 #about {
   margin: 1rem 1rem 0 1rem;
 
@@ -171,14 +199,13 @@ nav {
 }
 
 .features {
-  display: grid; 
-  grid-template-columns: 50% 50%; 
-  grid-template-rows: 1fr 1fr; 
-  gap: 0px 0px; 
-  grid-template-areas: 
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
     ". ."
-    ". ."; 
-
+    ". .";
 }
 
 article {
@@ -190,10 +217,15 @@ article {
   border-radius: 1rem;
 }
 
+.image__container {
+  width: 50%;
+}
+
 .image {
-  width: 100%;
+  width: 20vw;
   padding-right: 1rem;
   transition: 0.3s ease all;
+  object-fit: fill;
 }
 
 .image:hover {
@@ -317,8 +349,17 @@ article {
     flex-direction: column;
   }
 
+  .image__container {
+    width: 100%;
+  }
+
   .image {
     padding: unset;
+    width: 100%;
+  }
+
+  table {
+    width: 100%;
   }
 }
 
