--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,8 +128,12 @@ td {
 nav {
   display: flex;
   align-items: center;
-  background: rgb(122,115,93);
-  background: linear-gradient(90deg, rgba(122,115,93,1) 50%, rgba(207,200,178,1) 100%);
+  background: rgb(122, 115, 93);
+  background: linear-gradient(
+    90deg,
+    rgba(122, 115, 93, 1) 50%,
+    rgba(207, 200, 178, 1) 100%
+  );
 
   flex-direction: row;
   flex-wrap: nowrap;
@@ -167,8 +171,12 @@ nav {
   text-align: center;
 }
 
-.nav__link {
+.nav__name {
   color: #e7e7e7;
+}
+
+.nav__link {
+  color: unset;
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5rem;
@@ -239,12 +247,17 @@ article {
   display: inline;
 }
 
+.inner__link + .inner__link {
+  margin-left: 0.75rem;
+}
+
 .icons {
   display: flex;
   flex-direction: row;
-  width: 20%;
+  width: 100%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
+  margin: 0.5rem 0rem;
 }
 
 .actions {
@@ -262,11 +275,31 @@ article {
   border-radius: 1rem;
   padding: 1rem 2rem;
   background-color: #989898;
-  color: #fafafa
+  color: #fafafa;
+  text-decoration: none;
 }
 
 .link__primary {
   background-color: #7a735d;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__text__container {
+  width: 100%;
+  text-align: center;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-content: flex-start;
+}
+
+.footer__text {
+  margin: 0rem 0.5rem;
 }
 
 @media screen and (max-width: 1280px) {
