Changed the icons for skills. Fixed the font-colors to not be so harsh.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3, h4 {
+  color: #777;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -16,7 +20,7 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .wrapper {
@@ -116,8 +120,11 @@ td {
   border-radius: 7.5%;
   padding: 0.2rem;
   width: 4.5rem;
-
   transition: 0.25s ease all;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
 .skill:hover {
