--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,10 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: #777;
 }
 
@@ -58,21 +61,24 @@ td {
 
 #about {
   margin: 1rem 1rem 0 1rem;
-
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 25% 70%;
   grid-template-rows: 1fr;
-  gap: 0px 0px;
+  gap: 1rem;
   grid-auto-flow: row;
   grid-template-areas: ". .";
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
 }
 
 .about__wrapper__image {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
+  width: fit-content;
 }
 
 .about__wrapper__paragraphs {
@@ -80,8 +86,34 @@ td {
 }
 
 .avatar {
-  border-radius: 10%;
-  width: 70%;
+  border-radius: 1rem 1rem 0rem 0rem;
+  width: 100%;
+}
+
+.avatar__links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+  background: #7a735d;
+  color: #f4f4f4;
+  border-radius: 0% 0% 1rem 1rem;
+}
+
+.avatar__links__list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.avatar__links__link {
+  font-size: 1.75rem;
+  padding: 00.75rem;
+}
+
+a {
+  color: unset;
 }
 
 .section__header {
@@ -176,6 +208,12 @@ nav {
   list-style: none;
   width: 100%;
   text-align: center;
+  transition: 0.3s ease all;
+}
+
+.nav__links .nav__link-active a {
+  color: #4CBB17;
+  font-size: 2.0rem;
 }
 
 .nav__name {
@@ -183,7 +221,7 @@ nav {
 }
 
 .nav__link {
-  color: unset;
+  /* color: unset; */
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5rem;
@@ -192,7 +230,8 @@ nav {
 
 .nav__link-active {
   color: red;
-  background-color: blue;
+  background-color: #777;
+  border-radius: 1rem;
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5rem;
@@ -223,6 +262,11 @@ nav {
   grid-template-areas:
     ". ."
     ". .";
+}
+
+#projects,
+#resume {
+  margin: 2rem 2rem 0rem 2rem;
 }
 
 article {
@@ -341,6 +385,12 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background: rgb(122, 115, 93);
+    background: linear-gradient(
+      90deg,
+      rgba(122, 115, 93, 1) 50%,
+      rgba(207, 200, 178, 1) 100%
+    );
     position: fixed;
     top: 0;
     left: 0;
@@ -349,9 +399,10 @@ footer {
     padding: 1.5rem;
   }
 
-  .about {
+  #about {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .about__wrapper__image {
@@ -359,7 +410,7 @@ footer {
   }
 
   .nav__links {
-    background-color: #5d4954;
+    background-color: #7a735d;
     position: absolute;
     right: 0px;
     top: 0px;
@@ -373,6 +424,13 @@ footer {
     flex-wrap: nowrap;
     align-content: center;
     justify-content: space-evenly;
+  }
+
+  .nav__links li {
+    height: 5rem;
+    vertical-align: text-bottom;
+    display: flex;
+    align-items: center;
   }
 
   .nav__link {
@@ -402,6 +460,7 @@ footer {
       ". . . ."
       ". . . ."
       ". . . .";
+    width: 100%;
   }
 
   .features {
