--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,8 +212,8 @@ nav {
 }
 
 .nav__links .nav__link-active a {
-  color: #4CBB17;
-  font-size: 2.0rem;
+  color: black;
+  font-size: 2rem;
 }
 
 .nav__name {
@@ -221,7 +221,6 @@ nav {
 }
 
 .nav__link {
-  /* color: unset; */
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5rem;
@@ -229,7 +228,6 @@ nav {
 }
 
 .nav__link-active {
-  color: red;
   background-color: #777;
   border-radius: 1rem;
   text-decoration: none;
@@ -267,6 +265,11 @@ nav {
 #projects,
 #resume {
   margin: 2rem 2rem 0rem 2rem;
+}
+
+#resume {
+  display: flex;
+  justify-content: center;
 }
 
 article {
